# sb_exerc

12/: 12_5_1_ApartmentHouse.cpp  12_5_2_Sort.cpp  12_5_3_UsingAssert.cpp
13/: 13_6_1.cpp  13_6_2.cpp  13_6_3.cpp
14/: 14_1_BanquetTable.cpp  14_2_CrossesZero.cpp  14_3_Matrices.cpp  14_4_MultiplMatrixVector.cpp  14_5_Pupyrka.cpp
15/: 15_1.cpp  15_2.cpp  15_3.cpp  15_4.cpp
16/tasks/: 16_1_speedometer.cpp  16_2_fract_num_stapler.cpp  16_3_calculator.cpp  16_4_mech_piano.cpp  16_5_smart_home.cpp
17/tasks/: 17_1.cpp  17_2.cpp  17_3.cpp
18/tasks/: 18_1.cpp  18_2.cpp  18_3.cpp
19/tasks/19_1/: 19_1.cpp  words.txt
19/tasks/19_2/: 19_2.cpp  The_Hound_of_the_Baskervilles.txt
19/tasks/19_3/: 19_3.cpp
19/tasks/19_4/: 19_4.cpp
19/tasks/19_5/: 19_5.cpp  answer_6.txt  question_1.txt  question_10.txt  question_11.txt  question_12.txt  question_13.txt  question_2.txt  question_3.txt  question_4.txt  question_5.txt  question_6.txt  question_7.txt  question_8.txt  question_9.txt  questions_answers_англ.txt
20/tasks/20_1/: 20_1.cpp
20/tasks/20_1/output/: statement.txt
20/tasks/20_2/: 20_2.cpp
20/tasks/20_2/output/: binary_picture.txt
20/tasks/20_3/: 20_3.cpp
20/tasks/20_3/output/: basket.txt
20/tasks/20_4/: 20_4.cpp
21/tasks/21_1/: 21_1.cpp
21/tasks/21_2/: 21_2.cpp
21/tasks/21_3/: 21_3.cpp
22/tasks/22_1/: 22_1.cpp
22/tasks/22_1/output/: last_names.txt  phones.txt
22/tasks/22_2/: 22_2.cpp
22/tasks/22_3/: 22_3.cpp
23/tasks/: 23_1.cpp  23_2.c  23_2.cpp  23_2_wrap_main_funct.cpp  23_3.cpp
24/tasks/: 24_1.cpp  24_2.cpp  24_3.cpp
25/tasks/25_1/include/: custom_types.h  surg.h
25/tasks/25_1/src/: CMakeLists.txt  main.cpp  surg.cpp
25/tasks/25_2/: CMakeLists.txt
25/tasks/25_2/include/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
25/tasks/25_2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
26/tasks/26_1/: 26_1.cpp
26/tasks/26_2/: 26_2.cpp
26/tasks/26_3/: 26_3.cpp
27/tasks/27_1/: 27_1.cpp
27/tasks/27_2/: 27_2.cpp
27/tasks/27_3/: 27_3.cpp
28/tasks/28_1/: 28_1.cpp
28/tasks/28_2/: 28_2.cpp
28/tasks/28_3/: 28_3.cpp
29/tasks/29_1/: 29_1.cpp
29/tasks/29_2/include/: circle.h  global_types.h  output_functions.h  rectangle.h  shape.h  triangle.h
29/tasks/29_2/src/: CMakeLists.txt  circle.cpp  main.cpp  output_functions.cpp  rectangle.cpp  triangle.cpp
30/tasks/30_1/: CMakeLists.txt  main.cpp
30/tasks/30_2/: CMakeLists.txt  main.cpp
30/tasks/30_2_1/: CMakeLists.txt
30/tasks/30_2_1/include/: str.h
30/tasks/30_2_1/src/: CMakeLists.txt  main.cpp  str.cpp
30/tasks/30_3/: CMakeLists.txt
30/tasks/30_3/include/: url_requests.h
30/tasks/30_3/src/: CMakeLists.txt  main.cpp  url_requests.cpp
31/tasks/31_1/: 31_1.cpp
31/tasks/31_2/: 31_2.cpp
32/tasks/32_1/: CMakeLists.txt  main.cpp  movie.json
32/tasks/32_2/: CMakeLists.txt  main.cpp  movies.json
32/tasks/32_3/: CMakeLists.txt  company.pb.cc  company.pb.h  company.proto  main.cpp
33/tasks/33_1/: 33_1.cpp
33/tasks/33_2/: 33_2.cpp
33/tasks/33_3/: 33_3.cpp
33/tasks/33_4/: 33_4.cpp
35/tasks/35_1/: 35_1.cpp
35/tasks/35_2/: 35_2.cpp
35/tasks/35_3/: 35_3.cpp
36/tasks/36_1/36_color_circle/: 36_color_circle.pro  colorful_circle.cpp  colorful_circle.h  main.cpp
37/tasks/37_1/37_1_qmake/: 37_1_qmake.pro  callermainwindow.cpp  callermainwindow.h  main.cpp  mainwindow.ui
37/tasks/37_3/37_3_cmake/: CMakeLists.txt  callermainwindow.cpp  callermainwindow.h  main.cpp
37/tasks/37_3/37_3_qmake/: 37_3_qmake.pro  callermainwindow.h  tv_control_panel.ui
37/tasks/37_3/tv_control_37_3/: callermainwindow.cpp  callermainwindow.h  main.cpp  ui_tv_control.h  (+1 more)
38/38_1/38_1_cmake/: CMakeLists.txt  sound_button.cpp
38/38_1/38_1_qmake/: 38_1_qmake.pro  main.cpp  sound_button.cpp  sound_button.h
38/38_3_qmake/: mainwindow.cpp  mainwindow.h  mainwindow.ui
39/39_1/: main.qml
39/39_2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
(+7 files in other folders)
